--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -17,6 +17,7 @@
         ]]>
     </change-notes>
 
+    <idea-version since-build="145"/>
     <depends>com.intellij.modules.lang</depends>
 
     <extensions defaultExtensionNs="com.intellij">
